# hackathon-transport-predictions

./: .gitignore  0_🏠_Accueil.py  3_🗺️_Autour_de_chez_vous old.py  emplacement-des-gares-idf.csv  preprocessor.pkl  pyproject.toml  ratp.ipynb  ratp2.ipynb  requirements.txt  utils.py  validation_ratp.ipynb  validations-profils-2023-S1.csv  velo.ipynb
pages/: 1_🎟️_Validation.py  2_🚲_Vélib.py  3_🗺️_Autour_de_chez_vous.py  4_🗺️_Autour_de_chez_vous form.py
