[tool.poetry]
name = "transports"
version = "0.1.0"
description = ""
authors = ["Elliot Maisl <elliot.maisl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
folium = "^0.17.0"
streamlit = "^1.35.0"
plotly = "^5.22.0"
altair = "^5.3.0"
pydeck = "^0.9.1"
scikit-learn = "^1.5.0"
millify = "^0.1.1"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
